# rorm

./: Cargo.toml  README.md
examples/conn/sqlite/: Cargo.toml
examples/conn/sqlite/src/: main.rs
examples/fcss/getting_started/: Cargo.toml
examples/fcss/getting_started/src/: main.rs
examples/mysql/getting_started/: Cargo.toml
examples/mysql/getting_started/src/: main.rs
examples/pool/sqlite/: Cargo.toml
examples/pool/sqlite/src/: main.rs
examples/sqlite/getting_started/: Cargo.toml
examples/sqlite/getting_started/src/: main.rs
rorm/: Cargo.toml
rorm-conn/: Cargo.toml  build.rs
rorm-conn/src/: connection.rs  info.rs  lib.rs  value.rs
rorm-conn/src/drivers/: mod.rs  mysql.rs  sqlite.rs
rorm-conn/src/drivers/fcss/: mod.rs
rorm-conn/src/drivers/fcss/grpc/: .gitignore  api.rs  fcss.proto  mod.rs
rorm-error/: Cargo.toml
rorm-error/src/: lib.rs
rorm-macro/: Cargo.toml
rorm-macro/src/: generator.rs  lib.rs  parser.rs
rorm-pool/: Cargo.toml
rorm-pool/src/: connection.rs  info.rs  lib.rs  value.rs
rorm-pool/src/drivers/: sqlite.rs
rorm-query/: Cargo.toml
rorm-query/src/: delete.rs  filter.rs  insert.rs  lib.rs  query_value.rs  select.rs  update.rs  value.rs  where_cond.rs
rorm-test/: Cargo.toml
rorm-test/src/: lib.rs
rorm-test/tests/: basic.rs  flatten.rs  relation.rs  transaction.rs
rorm/src/: connection.rs  entity.rs  lib.rs  model.rs  model_column.rs  options.rs  repository.rs
rorm/src/builder/: delete.rs  find.rs  insert.rs  mod.rs  update.rs
rorm/src/connection/: mod.rs  transaction.rs
rorm/src/repository/: builder.rs  mod.rs  transaction.rs
