[package]
name = "rorm-conn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rorm-error = { path = "../rorm-error" }

async-trait = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }
tokio-02 = { package = "tokio", version = "0.2", default-features = false, optional = true, features = ["blocking"] }
tokio-1 = { package = "tokio", version = "1", default-features = false, optional = true, features = ["rt-multi-thread"] }
rusqlite = { git = "https://github.com/qpalzmqaz123/rusqlite.git", rev = "b715857f62d1004430c0d1a5afd2baa191f8360e", features = ["bundled"], optional = true }
mysql_lib = { package = "mysql", version = "23", default-features = false, features = ["rustls-tls"], optional = true }
flate2 = { version = "1", default-features = false, features = ["rust_backend"], optional = true }
tonic = { version = "0.7", default-features = false, features = ["prost", "transport", "codegen"], optional = true }
prost = { version = "0.10", default-features = false, features = ["prost-derive"], optional = true }
http = { version = "0.2", default-features = false, optional = true }
sqlparser = { version = "0.30", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, features = ["std"], optional = true }
snap = { version = "1", default-features = false, optional = true }
base64 = { version = "0.13", default-features = false, optional = true }

[build-dependencies]
tonic-build = { version = "0.7", optional = true }

[features]
default = []
sqlite = ["rusqlite"]
mysql = ["mysql_lib", "flate2"]
fcss = ["tonic", "tonic-build", "prost", "http", "sqlparser", "serde_json"]
fcss-compress = ["fcss", "snap", "base64"]
"runtime-tokio-0.2" = ["tokio-02"]
"runtime-tokio-1" = ["tokio-1"]
