[package]
name = "rorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rorm-macro = { path = "../rorm-macro" }
rorm-pool = { path = "../rorm-pool" }
rorm-query = { path = "../rorm-query" }
rorm-error= { path = "../rorm-error" }

[features]
default = []
sqlite = ["rorm-pool/sqlite"]
"runtime-tokio-0.2" = ["rorm-pool/runtime-tokio-0.2"]
"runtime-tokio-1" = ["rorm-pool/runtime-tokio-1"]
