[package]
name = "rorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rorm-macro = { path = "../rorm-macro" }
rorm-conn = { path = "../rorm-conn" }
rorm-query = { path = "../rorm-query" }
rorm-error= { path = "../rorm-error" }

async-trait = { version = "0.1", default-features = false }

[features]
default = []
sqlite = ["rorm-conn/sqlite"]
mysql = ["rorm-conn/mysql"]
fcss = ["rorm-conn/fcss"]
fcss-compress = ["rorm-conn/fcss-compress"]
"runtime-tokio-0.2" = ["rorm-conn/runtime-tokio-0.2"]
"runtime-tokio-1" = ["rorm-conn/runtime-tokio-1"]
