[package]
name = "rorm-conn-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rorm-conn = { path = "../../../rorm-conn", features = ["sqlite", "runtime-tokio-0.2"] }

tokio = { version = "0.2", default-features = false, features = ["macros"] }
env_logger = "0.9"
