[package]
name = "rorm-mysql-getting-started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rorm = { path = "../../../rorm", default-features = false, features = ["mysql", "runtime-tokio-1"] }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
env_logger = { version = "0.9" }
